# MAGLAB-Smart-Open-Status-Dial

./: README.md
apps/m5dial-timer/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
apps/m5dial-timer/components/board/: CMakeLists.txt
apps/m5dial-timer/components/board/include/board/: dial_board.h  pinmap.h
apps/m5dial-timer/components/board/src/: dial_board.cpp
apps/m5dial-timer/components/haptics/: CMakeLists.txt
apps/m5dial-timer/components/haptics/include/haptics/: motor_controller.h
apps/m5dial-timer/components/haptics/src/: motor_controller.cpp
apps/m5dial-timer/components/input/: CMakeLists.txt
apps/m5dial-timer/components/input/src/: encoder_reader.cpp  time_selector.cpp  touch_input.cpp
apps/m5dial-timer/components/lvgl/: lv_conf.h
apps/m5dial-timer/components/services/: CMakeLists.txt
apps/m5dial-timer/components/services/src/: state_persistence.cpp
apps/m5dial-timer/components/timer/: CMakeLists.txt
apps/m5dial-timer/components/timer/src/: state_machine.cpp  timer_engine.cpp
apps/m5dial-timer/components/ui/: CMakeLists.txt
apps/m5dial-timer/components/ui/src/: display_driver.cpp  ui_root.cpp
apps/m5dial-timer/main/: CMakeLists.txt  app_main.cpp
docs/: m5dial_pinmap.md  m5dial_timer_architecture.md  m5dial_timer_roadmap.md  matouch_knob_reference.md
scripts/: doc_sync.sh  host_sim.sh  m5dial_build.sh  m5dial_flash.sh
tools/host-sim/: CMakeLists.txt  README.md
tools/host-sim/include/: esp_err.h  esp_log.h
tools/host-sim/src/: sdl_driver.cpp  sdl_driver.h  sim_main.cpp
(+9 files in other folders)
